# Deep-Learning-for-Computer-Vision

./: .gitignore  README.md  pyproject.toml
docs/Convolutional_Neural_Networks/: 1-LeNet.md  2-AlexNet.md  3-VGG.md  4-NiN.md  5-GoogLeNet.md  6-ResNet.md  7-DenseNet.md  8-EfficientNet.md  AlexNet.md  DenseNet.md  GoogLeNet.md  LeNet.md  NiN.md  VGG.md
docs/Object_Detection/: 3-Fast-RCNN.md  4-Faster-RCNN.md
docs/utils/: convolution.md
src/: main.py
src/dataloader/: dataloader.py
src/models/: alexnet.py  cnn.py  leNet.py
src/training/: training.py
tests/dataloader/: test_dataloader.py
tests/models/: test_models.py
